# chatdbt

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  unit-test.yml
chatdbt/: __init__.py  chat.py  i18n.py  model.py  openai.py  shortcut.py
chatdbt/dbt_doc_resolver/: __init__.py  localfs.py
chatdbt/tiktoken_provider/: __init__.py  tiktoken_http_server.py
chatdbt/vector_storage/: __init__.py  atlas.py  pgvector.py
tests/: test_chatdbt.py
tests/testdata/jaffle_shop/: README.md  REVISION  catalog.json  manifest.json
tests/unit_tests/dbt_doc_resolver/: test_localfs.py
