[tool.poetry]
name = "chatdbt"
version = "0.0.1"
description = ""
authors = ["cadl <ctrlaltdeleteliu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pydantic = "^1.9"
openai = {version = "^0.27", extras = ["embeddings", "datalib"]}
tenacity = "^8"
requests = "^2.28"
nomic = {version = "^1.0", optional = true}
pgvector = {version = "^0.1", optional = true}
sqlalchemy = {version = "^2", optional = true}
psycopg = {version = "^3", optional = true, extras = ["binary"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
nomic = ["nomic"]
pgvector = ["pgvector", "sqlalchemy", "psycopg"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
