[tool.poetry]
name = "chatdbt"
version = "0.0.2"
description = "chatdbt is an openai-based dbt documentation robot. You can use natural language to describe your data query requirements to the robot, and chatdbt will help you select the dbt model you need, or generate sql responses based on these dbt models to meet your need"
authors = ["cadl <ctrlaltdeleteliu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pydantic = "^1.9"
openai = {version = "^0.27", extras = ["embeddings", "datalib"]}
tenacity = "^8"
requests = "^2.28"
nomic = {version = "^1.0", optional = true}
pgvector = {version = "^0.1", optional = true}
sqlalchemy = {version = "^2", optional = true}
psycopg = {version = "^3", optional = true, extras = ["binary"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^1"
ruff = "^0.0.260"
black = "^23"

[tool.poetry.extras]
nomic = ["nomic"]
pgvector = ["pgvector", "sqlalchemy", "psycopg"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
